# CSV-Perusal

./: .gitignore  Cargo.toml  README.md
src/: csvtype.rs  dates.rs  error.rs  errors.rs  lib.rs  main.rs  open.rs  regex.rs  types.rs  utils.rs  vector_to_byterecord.rs
src/dates/: date.rs  datetime.rs  mod.rs  time.rs  utils.rs
src/numbers/: currency.rs  mod.rs  percent.rs  utils.rs
src/temp/: mod.rs
