[package]
name = "csv_perusal"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
description = "Reads CSV files and returns the contents of the file with the appropriate datatype."
readme = "README.md"
repository = "https://github.com/Cosiamo/CSV-Perusal"
keywords = ["csv", "parser", "reader", "datatype", "data"]
categories = ["data-structures", "development-tools", "template-engine", "encoding", "parsing"]
exclude = ["main.rs", ".vscode/*", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
chrono = "0.4.26"
regex = "1.9.6"
serde = {version = "1.0.188", features = ["derive"] }